prevent dynamic container overlapping with section wrapper label

--- a/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
@@ -327,7 +327,7 @@ $dynamic-form-color: $border-color;
 
 formly-form > formly-field:first-child > formly-wrapper-form-field-only > * > * > * > * > * > .form-dynamic-container {
   border-top: 0;
-  margin-top: -$spacer;
+  //margin-top: -$spacer; // causes overlap when nested in section wrapper
 }
 
 formly-form > formly-field:last-child > formly-wrapper-form-field-only > * > * > * > * > * > * > .form-dynamic-footer {
